[package]
name = "oven"
version = "0.2.16"
authors = ["XMPPwocky <nttheis@gmail.com>"]
repository = "https://github.com/XMPPwocky/oven"
description = "Simple cookie management for Iron"
license = "MIT"

[dependencies]
iron = "^0.3.0"
plugin = "^0.2.6"

[dependencies.cookie]
version = "^0.2.2"
features = ["secure"]
